20070502 version: io_poll 0.2