@@ -1,8 +1,13 @@
 #include "../io_poll.h"
+#include "t_core.h"
 #include "t_assert.h"
 
-void setcore(struct io_poll *iop)
+void check_core(void)
 {
-  test_assert(io_poll_default_core());
-  test_assert(io_poll_setcore(iop, io_poll_default_core()));
+  test_assert(io_poll_default_core() != 0);
+}
+
+void init_core(struct io_poll *iop)
+{
+  test_assert(io_poll_initcore(iop, io_poll_default_core()) == 1);
 }
