@@ -1,0 +1,9 @@
+#ifndef T_CORE_H
+#define T_CORE_H
+
+#include "../io_poll.h"
+
+void check_core(void);
+void init_core(struct io_poll *);
+
+#endif
