@@ -1,16 +1,15 @@
 #include "../io_poll.h"
+#include "t_core.h"
 #include "t_assert.h"
 #include "t_verify.h"
 
 struct io_poll iop;
 
-void setcore(struct io_poll *);
-
 int main(void)
 {
-  setcore(&iop);
+  check_core();
 
-  test_assert(io_poll_init(&iop) == 1);
+  init_core(&iop);
   test_assert(io_poll_size(&iop) == 0);
   verify(&iop);
   test_assert(io_poll_free(&iop) == 1);
