@@ -8,13 +8,12 @@
 
 #include "../io_poll.h"
 #include "../_sd_fcntl.h"
+#include "t_core.h"
 #include "t_assert.h"
 #include "t_verify.h"
 
 struct io_poll iop;
 int pfd[2];
-
-void setcore(struct io_poll *);
 
 int main(void)
 {
@@ -25,9 +24,9 @@ int main(void)
   char buf[4];
   int r;
 
-  setcore(&iop);
+  check_core();
 
-  test_assert(io_poll_init(&iop) == 1);
+  init_core(&iop);
   test_assert(io_poll_size(&iop) == 0);
   verify(&iop);
 
