@@ -1,14 +1,6 @@
 #include "io_poll.h"
 #include "io_poll_impl.h"
 
-int io_poll_setcore(struct io_poll *iop, const struct io_poll_core *core)
-{
-  if (!core) return 0;
-  if (array_data(&iop->pd_in) || array_data(&iop->pd_out)) return 0;
-  iop->core = core;
-  return 1;
-}
-
 const struct io_poll_core *io_poll_default_core(void)
 {
 #if defined(HAVE_KQUEUE)
